--- a/manifest.json
+++ b/manifest.json
@@ -1,36 +1,33 @@
 {
-  "name": "YouTubeToGoogleMusic",
-  "version": "0.0.1",
-  "manifest_version": 2,
-  "description": "Adds a button on Youtube to search for the song playing on google music",
-  "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
-  },
-  "permissions": [
-    "tabs",
-    "https://www.youtube.com/watch?v=*",
-    "http://www.youtube.com/watch?v=*"
-  ],
-  "content_scripts": [
-    {
-      "matches": [
-        "https://www.youtube.com/watch?v=*",
-        "http://www.youtube.com/watch?v=*"
-      ],
-      "css": [
-        "inject/inject.css"
-      ]
+    "name": "Youtube to Google Music",
+    "version": "0.1",
+    "manifest_version": 2,
+    "description": "Adds button to youtube pages to search for song in google music",
+    "icons": {
+        "16": "icons/icon16.png",
+        "48": "icons/icon48.png",
+        "128": "icons/icon128.png"
     },
-    {
-      "matches": [
+    "permissions": [
+        "tabs",
         "https://www.youtube.com/watch?v=*",
         "http://www.youtube.com/watch?v=*"
-      ],
-      "js": [
-        "inject/inject.js"
-      ]
-    }
-  ]
+    ],
+    "content_scripts": [{
+        "matches": [
+            "https://www.youtube.com/watch?v=*",
+            "http://www.youtube.com/watch?v=*"
+        ],
+        "css": [
+            "inject/inject.css"
+        ]
+    }, {
+        "matches": [
+            "https://www.youtube.com/watch?v=*",
+            "http://www.youtube.com/watch?v=*"
+        ],
+        "js": [
+            "inject/inject.js"
+        ]
+    }]
 }
